[project]
name = ""
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "streamlit",
    "pandas",
    "streamlit-flow-component",
    "authlib>=1.6.1",
    "plotly>=6.2.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
